ChangeLog:

nxcomp-3.5.0-1

- Opened the 3.5.0 branch based on nxcomp-3.4.0-7.

- Updated copyright to year 2011.

nxcomp-3.4.0-7

- Fixed TR03H02334. Modified the UNIX domain socket checks on MacOSX
  to be compliant with the standard introduced in OSX 10.6.3.

nxcomp-3.4.0-6

- Solved compilation problems on Solaris.

nxcomp-3.4.0-5

- Solved compilation problems on GCC 4.4.

nxcomp-3.4.0-4

- Added reference to fixed TR02H02325.

nxcomp-3.4.0-3

- Updated copyright to year 2010.

nxcomp-3.4.0-2

- Fixed TR03G02204. Changed the parsing of X authority entries in
  order to handle the case where the hostname includes white spaces.

- Fixed TR02H02325. Bug in PNG decompression on 16bpp displays.

nxcomp-3.4.0-1

- Opened the 3.4.0 branch based on nxcomp-3.3.0-4.

- Changed version number.

- Updated copyright to year 2009.

nxcomp-3.3.0-4

- Check if the variable storing the ping time exceeded the maximum
  integer value.

- Recover incorrect sequence number when the proxy is not connected
  to an agent.

nxcomp-3.3.0-3

- Removed a condition in ClientChannel that caused a loss in event
  sequence numbers.

nxcomp-3.3.0-2

- Updated VERSION.

nxcomp-3.3.0-1

- Opened the 3.3.0 branch based on nxcomp-3.2.0-7.

nxcomp-3.2.0-7

- Solved a compilation problem on GCC 4.3.

nxcomp-3.2.0-6

- Changes considering that unsetenv() returns void on Mac OS X.

nxcomp-3.2.0-5

- Fixed TR03F02024. Assume the launchd unix socket as X socket.

- Changed the authorization cookie retrieval when using the launchd
  socket on MacOSX, in order to wait for the X server start.

nxcomp-3.2.0-4

- Fixed TR03F02026. Unset environment variable LD_LIBRARY_PATH before
  calling the exec function running nxclient.

nxcomp-3.2.0-3

- Fix addMsTimestamp() and subMsTimestamp(). Remove the check for
  a valid input in diffTimestamp() and diffUsTimestamp().

nxcomp-3.2.0-2

- Fixed TR12E01973. Now the correct number of bits are used for the
  number of points in a X_FillPoly request.

nxcomp-3.2.0-1
